Moved some things around; added new example; started new section on special types of matrices and pairs

--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,6 @@
 %%%%%%%%%%%%%%%%%% Assorted Packages %%%%%%%%%%%%%%%%%%
 \usepackage[colorlinks=true,pagebackref,hyperindex,citecolor=nicegreen,linkcolor=niceblue,urlcolor=nicered]{hyperref}
 \usepackage{amsmath,amsthm,amsfonts,amssymb}
-%\usepackage{color}
 \usepackage{mathrsfs,stmaryrd,bm}
 \usepackage[mathcal]{euscript}
 \usepackage{mathtools,soul}
@@ -24,6 +23,7 @@
 ruled,
 %linesnumbered,
 vlined]{algorithm2e}
+\usepackage{rotating}
 
 %shortfall and deficit
 \newcommand{\short}{\operatorname{short}}
